--- a/app/views/users/home.scala.html
+++ b/app/views/users/home.scala.html
@@ -13,7 +13,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
         <li><a href="@controllers.users.routes.Users.forum(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
         <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
         <li class="last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>我关注的</a></li>
-       <!--  <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>-->
+
     </ul>
 </div>
 <!--nav  end -->
@@ -51,9 +51,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                         <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
                             <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
                         </a>
-                        @if(!user.isEmpty && user.get.id==author.id){
+                       <!-- @if(!user.isEmpty && user.get.id==author.id){
                         <a class="ilike-del"  href="javascript:;" data-type="share" data-proid="@goods.id.get">喜欢-1</a>
-                         }
+                         }-->
                     </div>
                     <div class="goods-title ofh inlineblock">
                         @goods.name
@@ -107,9 +107,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 <div class="theme-state">
                     <span>@item._1._4 人关注</span>
                 </div>
-                @if(!user.isEmpty && user.get.id==author.id){
+              <!--  @if(!user.isEmpty && user.get.id==author.id){
                 <a class="ilike-del" href="javascript:;" data-type="my" data-proid="@item._1._1">删除</a>
-                }
+                }-->
             </div>
             }
 
