--- a/app/views/users/theme.scala.html
+++ b/app/views/users/theme.scala.html
@@ -17,7 +17,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     <li><a href="@controllers.users.routes.Users.forum(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
                     <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
                     <li class="last" ><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>我关注的</a></li>
-                  <!--  <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>-->
+
                 </ul>
             </div>
             <!--nav  end -->
@@ -65,9 +65,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                     <span>@item._1._4 人关注</span>
                                     }
                                 </div>
-                                @if(!user.isEmpty && user.get.id.get == author.id.get){
+                              <!--  @if(!user.isEmpty && user.get.id.get == author.id.get){
                                 <a class="ilike-del" href="javascript:;" data-type="@t" data-themeid="@item._1._1">删除</a>
-                                }
+                                }-->
                             </div>
                             }
 
