adjust nav,add new nav china

--- a/app/views/goods/view.scala.html
+++ b/app/views/goods/view.scala.html
@@ -16,7 +16,7 @@ description = goods.intro
             <div class="gallery">
                 <div class="pic-box">
                     @if(user.isEmpty){
-                    <a class="buy-btn" rel="loginD2" data-numiid="@goods.numIid" data-goodsid="@goods.id.get" data-rate="@goods.rate"  target="_blank" rel="nofollow">
+                    <a  rel="loginD2" data-numiid="@goods.numIid" data-goodsid="@goods.id.get" data-rate="@goods.rate"  target="_blank" rel="nofollow">
                         <img id="J_PicCover" src="@goods.pic" alt="@goods.name" />
                     </a>
 
