--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -66,7 +66,7 @@
                 <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >生活馆</a> </li>-->
                 <li class='@("on".when(nav == "themes"))'>  <a href="/themes" >主题</a> </li>
                 <li><span>-</span></li>
-                <li class= 'china @("on".when(nav == "china"))'>  <a href="/china" >特色中国</a> </li>
+                <li class= 'china'>  <a class='@("on".when(nav == "china"))' href="/china" >特色中国</a> </li>
             </ul>
             <!-- 签到 -->
                 <a class="btn-checkIn fr" href="javascript:;" rel="checkIn">签到</a>
