--- a/app/views/admin/tags/tagGoodses.scala.html
+++ b/app/views/admin/tags/tagGoodses.scala.html
@@ -40,7 +40,7 @@
                             <div class="controls">
                                 <select name="cid" id="cid">
                                     <option value="">所有分类</option>
-                                    @for(cate<-models.Cate.values){
+                                    @for(cate<-models.Cate.values.toList.sortBy(x=>x.id)){
                                     <option value="@cate.id">@cate</option>
 
                                     }
