--- a/app/views/pages/faxian.scala.html
+++ b/app/views/pages/faxian.scala.html
@@ -101,7 +101,7 @@ title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱生活"
 }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/goods/goods.find,app/goods/goods.favor');
+        init.load('app/goods/goods.faxian,app/goods/goods.favor');
     });
 </script>
 }
