--- a/app/views/users/regLogin/resetPasswd.scala.html
+++ b/app/views/users/regLogin/resetPasswd.scala.html
@@ -5,7 +5,7 @@ title =  "食美特，爱美食爱生活——找回密码"
 )(css="/assets/css/template/user.regLogin.css") {
 
     <div class="container" id="regLogin">
-        <div class="content clearfix">
+        <div class="setting clearfix">
 
             <div class="set-box">
                 <h2>重置密码</h2>
