--- a/public/assets/css/template/user.regLogin.css
+++ b/public/assets/css/template/user.regLogin.css
@@ -4,9 +4,10 @@
  * Time: 上午10:45
  * 维护人员:zuosanshao@qq.com
  */
-.content {
+.setting {
+
     padding: 50px;
-    margin: 0 auto;
+    margin: 20px auto;
     background: #fff;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
