--- a/public/assets/css/template/user.setting.css
+++ b/public/assets/css/template/user.setting.css
@@ -4,7 +4,8 @@
  * Time: 上午9:49
  * 维护人员:zuosanshao@qq.com
  */
-.content {
+.setting {
+    margin-top: 20px;
     min-height: 500px;
     padding: 50px;
     background: #fff;
