--- a/app/views/admin/tags/editGroup.scala.html
+++ b/app/views/admin/tags/editGroup.scala.html
@@ -48,7 +48,7 @@
                 <label class="control-label">主题分类</label>
                 <div class="controls">
                     <select name="cid" id="cid">
-                          @for(cate<-models.Cate.values){
+                          @for(cate<-models.Cate.values.toList.sortBy(x=>x.id)){
                         <option value="@cate.id" @(if(form("cid").value.getOrElse(-1) == cate.id.toString) {"selected"})>@cate</option>
 
                         }
