--- a/app/views/pages/china.scala.html
+++ b/app/views/pages/china.scala.html
@@ -1,12 +1,90 @@
-@(user:Option[models.user.User])
+@(user:Option[models.user.User],page:models.Page[((Int,Long,String,String,Int,String,Option[String],String),List[(Option[Long],Option[String],Option[String],Option[String])])],tag:String )
 @views.html.template(
 user,
 nav="china",
-title =  "特色馆_食美特，爱美食爱生活"
-)(css="/assets/css/template/themes.css") {
+title =  "特色中国_食美特，爱美食爱生活"
+)(css="/assets/css/template/china.css") {
 
-<div class="container clearfix" id="themes">
-            todo
+<div class="container clearfix" id="china">
+    <div class="goods-wall s1024" id="J_GoodsWall">
+        <div class="section">
+
+            @for((((commissionRate,goodsId,goodsName,goodsPic,goodsLoveNum,goodsPrice,goodsPromotionPrice,goodsIntro),comments),i)<-page.items.view.zipWithIndex) {
+
+            <div class="goods small @if((i+1)%4==0){last} ">
+                <div class="goods-pic">
+                    <a class="pic-link" href="@controllers.routes.Goods.view(goodsId)" title="@goodsName" target="_blank">
+                        <img src='@(goodsPic+"_210x210.jpg")' width="210" height="210" title="@goodsName" alt="@goodsName" />
+                    </a>
+                    <a  class="ilike-m" href="javascript:;" data-proimgsrc="@goodsPic" data-prourl="@controllers.routes.Goods.view(goodsId)" data-proname="@goodsName" data-type="0" data-proid="@goodsId">
+                        <i></i>
+                        <span class="ilikeCount" data-val="@goodsLoveNum">喜欢(@goodsLoveNum)</span>
+                    </a>
+                </div>
+                <div class="goods-title ofh">
+                    @goodsName
+                </div>
+                <div class="goods-stat">
+                    <span class="mr10 like-count">@goodsLoveNum</span>
+
+                    @if(goodsPromotionPrice.isEmpty){
+                    <span>￥@goodsPrice</span>
+                    }else{
+                    @if(goodsPrice!=goodsPromotionPrice.get){
+                    <span style="text-decoration: line-through">￥@goodsPrice</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <span>￥@goodsPromotionPrice</span>
+                    }else{  <span>￥@goodsPrice</span> }
+                    }
+                </div>
+                <p class="goods-des">
+                    @goodsIntro
+                </p>
+                <div class="comment">
+
+                    @for(((uid,uname,upic,content),i)<-comments.view.zipWithIndex) {
+                    @if(!uid.isEmpty){
+
+                    <div class="comment-item @if(i>0) {comment-item-more }">
+                        <div class="user-pic">
+                            <a class="a-img"  href="@controllers.users.routes.Users.home(uid.getOrElse(1))" title="@uname" target="_blank">
+                                <img src="@upic" width="30" height="30" alt="@uname"/>
+                            </a>
+                        </div>
+                        <div class="content">
+                            <a class="user-name"  href="@controllers.users.routes.Users.home(uid.getOrElse(0))" title="@uname" target="_blank">@uname</a>
+                            <span>@content</span>
+                        </div>
+                    </div>
+                    }
+                    }
+                </div>
+            </div>
+
+            }
+        </div>
+
+    </div>
+
+    <!--宝贝展示 end-->
+    <div class="clear"></div>
+    <div class="pt30 pb20 clearfix">
+        <div class="pagin4faxian tac">
+            <ul>
+                @for(num <-page.nums){
+                @if(num==page.currentPage){
+                <li><span>第 @num 页</span></li>
+                }else {
+                <li><a href="@controllers.routes.Pages.china(tag,num)">第@num 页</a></li>
+                }
+                }
+            </ul>
+
+            <span class="current">第 @page.currentPage 页</span>
+            @if(page.currentPage != page.totalPages){
+            <a title="翻翻下一页" href="@controllers.routes.Pages.china(tag,page.currentPage+1)" class="next">翻翻下一页&gt;</a>
+            }
+        </div>
+    </div>
 </div>
 
         }{
