--- a/app/views/users/commission/invite.scala.html
+++ b/app/views/users/commission/invite.scala.html
@@ -3,7 +3,7 @@
 user
 )(css="/assets/css/template/user.setting.css") {
 <div class="container" id="account">
-    <div class="content clearfix">
+    <div class="setting clearfix">
         <div class="side-nav">
             <h2>帐号设置</h2>
             <ul>
