--- a/app/views/users/msg/comment.scala.html
+++ b/app/views/users/msg/comment.scala.html
@@ -3,7 +3,7 @@
 user
 )(css="/assets/css/template/user.setting.css") {
 <div class="container" id="home">
-    <div class="content clearfix">
+    <div class="setting clearfix">
         <div class="side-nav">
             <h2>消息中心</h2>
             <ul class="nav_r">
