--- a/app/views/users/regLogin/regist.scala.html
+++ b/app/views/users/regLogin/regist.scala.html
@@ -4,7 +4,7 @@ title =  "食美特，爱美食爱生活——用户注册"
 )(css="/assets/css/template/user.regLogin.css") {
 
     <div class="container" id="regLogin">
-        <div class="content clearfix">
+        <div class="setting clearfix">
             <h2>注册</h2>
             <div class="regBox">
 
