--- a/public/assets/css/template/china.css
+++ b/public/assets/css/template/china.css
@@ -9,9 +9,11 @@
 * http://www.smeite.com/
 *
 */
-
+ #china{
+ background-color: white;
+     padding: 20px;
+ }
 .tag-list {
-    margin-top: 20px;
     position: relative;
     border-bottom: 1px solid #d9d9d9;
 
