--- a/public/assets/css/template/find.css
+++ b/public/assets/css/template/find.css
@@ -11,7 +11,7 @@
 */
 
 .tag-list {
-    margin-top: 20px;
+    padding-top: 20px;
     position: relative;
     border-bottom: 1px solid #d9d9d9;
 
