--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -6,6 +6,94 @@ title = " 美食街_食美特，爱美食爱生活"
 )(css="/assets/css/template/themes.css") {
 
 <div class="container clearfix" id="themes">
+
+<div class="main-box clearfix">
+
+    <div class="flash fl">
+        <div class="scrollable">
+
+            <div class="items">
+
+
+                <div class="item">
+                    <a href="http://smeite.com/find/美食/菌类" title="春困时节巧养生" target="_blank">
+                        <img src="/images/adv/0407chunkun.jpg" alt="春困时节巧养生" width="720" height="270">
+                    </a>
+                </div>
+
+                <div class="item">
+                    <a href="http://smeite.com/find/美食/进口食品" title="进口食品集结号" target="_blank">
+                        <img src="/images/adv/0407jinkou.jpg" alt="进口食品集结号" width="720" height="270">
+                    </a>
+                </div>
+
+                <div class="item">
+                    <a href="http://smeite.com/find/居家/收纳" title="我的幸福小家" target="_blank">
+                        <img src="/images/adv/0407shouna.jpg" alt="我的幸福小家" width="720" height="270">
+                    </a>
+                </div>
+
+                <div class="item">
+                    <a href="http://smeite.com/forum/view/2" title="我们上线啦" target="_blank">
+                        <img src="/images/adv/720.jpg" alt="我们上线啦" width="720" height="270">
+                    </a>
+                </div>
+
+                <div class="item">
+                    <a href="http://smeite.com/find/好玩意/生日礼物" title="生日礼物" target="_blank">
+                        <img src="/images/adv/0704liwu.jpg" alt="生日礼物" width="720" height="270">
+                    </a>
+                </div>
+
+            </div>
+
+
+        </div>
+        <ul class="navi clearfix">
+            <li>
+                <span></span>
+            </li>
+            <li >
+                <span></span>
+
+            </li>
+
+            <li >
+                <span></span>
+
+            </li>
+
+            <li>
+                <span></span>
+
+            </li>
+
+            <li>
+                <span></span>
+
+            </li>
+
+
+        </ul>
+    </div>
+    <!--kissy switchable  slide end-->
+    <div class="bulletin r5 fr clearfix">
+         <div class="bulletin-tips">
+               <h3 class="mt15 mb10">用快乐的心情</h3>
+                <h3 class="mb15">收录生活的正能量</h3>
+               <p class="edit">{ 我就是主编 }</p>
+               <p><a class="create-theme" href="@controllers.routes.Themes.edit(0)"> 创作主题</a> </p>
+             <p class="tips"> 优质主题，赠送食豆10粒哦 </p>
+         </div>
+
+
+
+    </div>
+    <!--最近热门的好玩意儿 end-->
+
+</div>
+
+
     <div class="tag-book clearfix">
     <div class="hd">
         <span class="prev"><a href="/jie">&lt;美食街</a></span>
