--- a/app/views/pages/gallery.scala.html
+++ b/app/views/pages/gallery.scala.html
@@ -6,34 +6,88 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
 )(css="/assets/css/template/themes.css") {
 
 <div class="container clearfix" id="themes">
-<div class="tag-book clearfix">
-    <div class="hd">
-        <h2>@models.Cate(cid)</h2>
-        <span class="prev"><a href="/jie">&lt;美食街</a></span>
-        <span class="next"><a href="/miss">特色馆&gt;</a></span>
+    <div class="main-box clearfix">
+
+        <div class="flash fl">
+            <div class="scrollable">
+
+                <div class="items">
+
+
+                    <div class="item">
+                        <a href="http://smeite.com/find/美食/菌类" title="春困时节巧养生" target="_blank">
+                            <img src="/images/adv/0407chunkun.jpg" alt="春困时节巧养生" width="720" height="270">
+                        </a>
+                    </div>
+
+                    <div class="item">
+                        <a href="http://smeite.com/find/美食/进口食品" title="进口食品集结号" target="_blank">
+                            <img src="/images/adv/0407jinkou.jpg" alt="进口食品集结号" width="720" height="270">
+                        </a>
+                    </div>
+
+                    <div class="item">
+                        <a href="http://smeite.com/find/居家/收纳" title="我的幸福小家" target="_blank">
+                            <img src="/images/adv/0407shouna.jpg" alt="我的幸福小家" width="720" height="270">
+                        </a>
+                    </div>
+
+                    <div class="item">
+                        <a href="http://smeite.com/forum/view/2" title="我们上线啦" target="_blank">
+                            <img src="/images/adv/720.jpg" alt="我们上线啦" width="720" height="270">
+                        </a>
+                    </div>
+
+                    <div class="item">
+                        <a href="http://smeite.com/find/好玩意/生日礼物" title="生日礼物" target="_blank">
+                            <img src="/images/adv/0704liwu.jpg" alt="生日礼物" width="720" height="270">
+                        </a>
+                    </div>
+
+                </div>
+
+
+            </div>
+            <ul class="navi clearfix">
+                <li class="active"></li>
+                <li ></li>
+                <li ></li>
+                <li ></li>
+                <li ></li>
+            </ul>
+        </div>
+        <!--kissy switchable  slide end-->
+        <div class="bulletin r5 fr clearfix">
+            <div class="bulletin-tips">
+                <h3 class="mt15 mb10">用快乐的心情</h3>
+                <h3 class="mb15">收录生活的正能量</h3>
+                <p class="edit mb10">{ 我就是主编 }</p>
+                <p><a class="create-theme" href="@controllers.routes.Themes.edit(0)"> 创作主题</a> </p>
+                <p class="tips"> 优质主题，赠送食豆10粒哦 </p>
+            </div>
+
+
+
+        </div>
+        <!--最近热门的好玩意儿 end-->
+
     </div>
-    <div class="theme-main" style="width: 930px">
-    <div class="theme-nav">
-        <ul>
-            <li class="on"><a href="@controllers.routes.Pages.gallery(cid)" title="最热">最热</a></li>
-            <li>-</li>
-            <li><a href='@controllers.routes.Pages.gallery(cid,"new",1)' title="最新">最新</a></li>
 
-
-
-
-        </ul>
-    </div>
-
-        <div class="theme-list clearfix">
+    <div class="category clearfix">
+        <div class="hd clearfix">
+            <h2 class="fl"><a>美食</a></h2>
+            <h3 class="fl"><span>-</span> <a>最新</a> <a>最热</a> </h3>
+            <a class="fr">更多</a>
+        </div>
+        <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-page.items.view.zipWithIndex){
-            <div class="theme-item @if((i+1)%4==0){last-item} ">
+            <div class="item @if((i+1)%4==0){last}">
                 <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
                     @for((pic,i)<-pics.view.zipWithIndex){
                     @if(i==0){
-                    <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")'>
+                    <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
                     }else{
-                    <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")'>
+                    <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
                     }
                     }
 
@@ -43,44 +97,16 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
                 </h3>
 
                 <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
-                <a rel="followTheme" href="javascript:;"  class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
-                    <a rel="followTheme" href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
+                    <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
                     </a>
                     </span>
             </div>
             }
-
-
         </div>
-
-        <div class="tac mt20">
-            <div class="pagin inlineblock clearfix" id="J_Pagination">
-                @if(page.nums.length>1){
-                @page.prev.map { page =>
-                <a class="prev" href="@controllers.routes.Pages.gallery(cid,sortBy,page)">上一页</a>
-                }
-                @for(num <-page.nums){
-                @if(num==page.currentPage){
-                <span class="current" >@num</span>
-                }else {
-                <a href="@controllers.routes.Pages.gallery(cid,sortBy,num)">@num</a>
-                }
-                }
-                @page.next.map { page =>
-                <a class="next" href="@controllers.routes.Pages.gallery(cid,sortBy,page)">下一页</a>
-
-                }
-
-                }
-            </div>
-        </div>
-    <!--topic main end-->
     </div>
-</div>
-
-
 
 
 
