--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -50,30 +50,11 @@ title = " 美食街_食美特，爱美食爱生活"
 
         </div>
         <ul class="navi clearfix">
-            <li>
-                <span></span>
-            </li>
-            <li >
-                <span></span>
-
-            </li>
-
-            <li >
-                <span></span>
-
-            </li>
-
-            <li>
-                <span></span>
-
-            </li>
-
-            <li>
-                <span></span>
-
-            </li>
-
-
+            <li class="active"></li>
+            <li ></li>
+            <li ></li>
+            <li ></li>
+            <li ></li>
         </ul>
     </div>
     <!--kissy switchable  slide end-->
@@ -81,7 +62,7 @@ title = " 美食街_食美特，爱美食爱生活"
          <div class="bulletin-tips">
                <h3 class="mt15 mb10">用快乐的心情</h3>
                 <h3 class="mb15">收录生活的正能量</h3>
-               <p class="edit">{ 我就是主编 }</p>
+               <p class="edit mb10">{ 我就是主编 }</p>
                <p><a class="create-theme" href="@controllers.routes.Themes.edit(0)"> 创作主题</a> </p>
              <p class="tips"> 优质主题，赠送食豆10粒哦 </p>
          </div>
@@ -94,90 +75,41 @@ title = " 美食街_食美特，爱美食爱生活"
 </div>
 
 
-    <div class="tag-book clearfix">
-    <div class="hd">
-        <span class="prev"><a href="/jie">&lt;美食街</a></span>
-        <h2><a href="/themes">主题，只有你想不到的～</a></h2>
-        <span class="next"><a href="/miss">创意馆&gt;</a></span>
+
+     <div class="category clearfix">
+    <div class="hd clearfix">
+        <h2 class="fl"><a>美食</a></h2>
+        <a class="fr">更多</a>
     </div>
+    <div class="group clearfix">
+        @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-page.items.view.zipWithIndex){
+        <div class="item @if((i+1)%4==0){last}">
+            <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                @for((pic,i)<-pics.view.zipWithIndex){
+                @if(i==0){
+                <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
+                }else{
+                <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
+                }
+                }
 
-    <div class="theme-main" style="width: 930px">
-    <div class="theme-nav">
-        <ul>
-            <li @if(sortBy=="hot"){class="on"}><a href='@controllers.routes.Pages.jie("hot",cid,1)' title="最热">最热</a></li>
-            <li>-</li>
-            <li @if(sortBy=="new"){class="on"}><a href='@controllers.routes.Pages.jie("new",cid,1)' title="最新">最新</a></li>
+            </a>
+            <h3 class="ofh">
+                <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+            </h3>
 
-            <li>-</li>
-            <li @if(cid == 0){class="cur"}><a href="@controllers.routes.Pages.jie(sortBy,0,1)"  title="健康美食">健康美食</a></li>
-            <li>-</li>
-            <li @if(cid == 1){class="cur"}><a href="@controllers.routes.Pages.jie(sortBy,1,1)"  title="健康美食">特产乡情</a></li>
-            <li>-</li>
-            <li @if(cid == 2){class="cur"}><a href="@controllers.routes.Pages.jie(sortBy,2,1)" title="健康美食">滋补保健</a></li>
-            <li>-</li>
-            <li @if(cid == 3){class="cur"}><a href="@controllers.routes.Pages.miss(sortBy,3,1)" title="居家生活">居家生活</a></li>
-            <li>-</li>
-            <li @if(cid == 5){class="cur"}><a href="@controllers.routes.Pages.miss(sortBy,5,1)" title="好玩意">好玩意</a></li>
-
-
-
-        </ul>
-    </div>
-
-        <div class="theme-list clearfix">
-            @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-page.items.view.zipWithIndex){
-            <div class="theme-item @if((i+1)%4==0){last-item} ">
-                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
-                    @for((pic,i)<-pics.view.zipWithIndex){
-                     @if(i==0){
-                    <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
-                    }else{
-                    <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
-                    }
-                    }
-
-                </a>
-                <h3 class="ofh">
-                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
-                </h3>
-
-                <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
-                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+            <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+            <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
                     </a>
                     </span>
-            </div>
-            }
-
-
         </div>
-    <!--theme main end-->
-
-        <div class="tac mt20">
-            <div class="pagin inlineblock clearfix" id="J_Pagination">
-                @if(page.nums.length>1){
-                @page.prev.map { page =>
-                <a class="prev" href="@controllers.routes.Pages.jie(sortBy,page)">上一页</a>
-                }
-                @for(num <-page.nums){
-                @if(num==page.currentPage){
-                <span class="current">@num</span>
-                }else {
-                <a href="@controllers.routes.Pages.jie(sortBy,num)">@num</a>
-                }
-                }
-                @page.next.map { page =>
-                <a class="next" href="@controllers.routes.Pages.jie(sortBy,page)">下一页</a>
-
-                }
-
-                }
-            </div>
-        </div>
+        }
     </div>
 </div>
+
 </div>
 
 
