--- a/app/views/pages/gallery.scala.html
+++ b/app/views/pages/gallery.scala.html
@@ -76,8 +76,8 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
     <div class="category clearfix">
         <div class="hd clearfix">
             <h2 class="fl"><a>美食</a></h2>
-            <h3 class="fl"><span>-</span> <a>最新</a> <a>最热</a> </h3>
-            <a class="fr">更多</a>
+            <h3 class="fl"><span> -- </span> <span>最新</span> <a>最热</a> </h3>
+
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-page.items.view.zipWithIndex){
