--- a/app/views/themes/view.scala.html
+++ b/app/views/themes/view.scala.html
@@ -106,7 +106,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
             <i></i>
         </ul>
 			<span class="pos-l-txt gc6">返回：
-    	    	        <a href='@controllers.routes.Pages.jie("hot",1)'>美食街</a>
+    	    	        <a href='@controllers.routes.Pages.miss'>美食街</a>
     	    	        <span class="ml5 mr5">/</span>
                       <a href='@controllers.routes.Pages.gallery(theme.cid,"new",1)'>@models.Cate(theme.cid)</a>
 
