--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -99,6 +99,7 @@
                         <li><a href='@controllers.admin.routes.Adverts.channel("tejia")'>天天特价管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("checkIn")'>签到推荐管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("forum")'>讨论吧频道管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("miss")'>主题频道管理</a></li>
                     </ul>
                 </li>
                 <li class="submenu @if(nav=="vote"){active open}">
