--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -39,11 +39,11 @@ nav="index"
 
         </div>
         <ul class="navi clearfix">
-            @for((flash,i)<-flashes.view.zipWithIndex){
-            <li @if(i==0){class="active"} @if(i==4){class="last"}>
-            </li>
-            }
-
+            <li class="active"></li>
+            <li class="active"></li>
+            <li class="active"></li>
+            <li class="active"></li>
+            <li class="active last"></li>
         </ul>
     </div>
     <!--kissy switchable  slide end-->
