--- a/app/views/pages/miss.scala.html
+++ b/app/views/pages/miss.scala.html
@@ -1,38 +1,110 @@
-@(user:Option[models.user.User],page:models.Page[((Long,String,String,Int),List[String])],cid:Int,sortBy:String)
+@(
+user:Option[models.user.User],
+flashes:List[models.advert.Advert],
+meishiThemes:List[((Long,String,String,Int),List[String])],
+techanThemes:List[((Long,String,String,Int),List[String])],
+zibuThemes:List[((Long,String,String,Int),List[String])],
+jujiaThemes:List[((Long,String,String,Int),List[String])],
+haowanyiThemes:List[((Long,String,String,Int),List[String])]
+)
 @views.html.template(
 user,
-nav="themes",
-title =  "特色馆_食美特，爱美食爱生活"
-)(css="/assets/css/template/jie.css") {
+nav="miss",
+title = " 美食街_食美特，爱美食爱生活"
+)(css="/assets/css/template/themes.css") {
 
 <div class="container clearfix" id="themes">
-<div class="tag-book clearfix">
-    <div class="hd">
-        <span class="prev"><a href="/themes">&lt;主题</a></span>
-        <h2><a href="/miss"> 特色馆，望你一眼……</a> </h2>
-        <span class="next"><a href="/jie">美食街&gt;</a></span>
-    </div>
-    <div class="theme-main" style="width: 930px">
-        <div class="theme-nav">
-            <ul>
-                <li @if(sortBy=="hot"){class="on"}><a href='@controllers.routes.Pages.miss("hot",cid,1)' title="最热">最热</a></li>
-                <li>-</li>
-                <li @if(sortBy=="new"){class="on"}><a href='@controllers.routes.Pages.miss("new",cid,1)' title="最新">最新</a></li>
 
-                <li>-</li>
-                <li @if(cid == 3){class="cur"}><a href="@controllers.routes.Pages.miss(sortBy,3,1)" title="居家生活">居家生活</a></li>
+<div class="main-box clearfix">
 
-                <li>-</li>
-                <li @if(cid == 5){class="cur"}><a href="@controllers.routes.Pages.miss(sortBy,5,1)" title="好玩意">好玩意</a></li>
+    <div class="flash fl">
+        <div class="scrollable">
+
+            <div class="items">
 
 
+                @for(flash <- flashes) {
+                <div class="item">
+                    <a href="@flash.link" title="@flash.title" target="_blank">
+                        <img src="@flash.pic" alt="@flash.title" width="720" height="270">
+                    </a>
+                </div>
+                }
 
-            </ul>
+            </div>
+
+
         </div>
+        <ul class="navi clearfix">
+            <li class="active"></li>
+            <li ></li>
+            <li ></li>
+            <li ></li>
+            <li ></li>
+        </ul>
+    </div>
+    <!--kissy switchable  slide end-->
+    <div class="bulletin r5 fr clearfix">
+         <div class="bulletin-tips">
+               <h3 class="mt15 mb10">用快乐的心情</h3>
+                <h3 class="mb15">收录生活的正能量</h3>
+               <p class="edit mb10">{ 我就是主编 }</p>
+               <p><a class="create-theme" href="@controllers.routes.Themes.edit(0)"> 创作主题</a> </p>
+             <p class="tips"> 优质主题，赠送食豆10粒哦 </p>
+         </div>
 
-        <div class="theme-list clearfix">
-            @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-page.items.view.zipWithIndex){
-            <div class="theme-item @if((i+1)%4==0){last-item} ">
+
+
+    </div>
+    <!--最近热门的好玩意儿 end-->
+
+</div>
+
+
+    <!-- 美食主题推荐-->
+     <div class="category clearfix">
+    <div class="hd clearfix">
+        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(0,"new",1)'>美食</a></h2>
+        <a class="fr" href='@controllers.routes.Pages.gallery(0,"new",1)'>更多&gt;&gt;</a>
+    </div>
+    <div class="group clearfix">
+        @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-meishiThemes.view.zipWithIndex){
+        <div class="item @if((i+1)%4==0){last}">
+            <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                @for((pic,i)<-pics.view.zipWithIndex){
+                @if(i==0){
+                <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
+                }else{
+                <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
+                }
+                }
+
+            </a>
+            <h3 class="ofh">
+                <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+            </h3>
+
+            <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+            <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+					<span class="mete pl15">
+                    <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
+                        <em class="J_LikeCount">@themeLoveNum</em> 人关注
+                    </a>
+                    </span>
+        </div>
+        }
+    </div>
+</div>
+
+    <!-- 特产主题推荐-->
+    <div class="category clearfix">
+        <div class="hd clearfix">
+            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(1,"new",1)'>特产</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.gallery(1,"new",1)'>更多&gt;&gt;</a>
+        </div>
+        <div class="group clearfix">
+            @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-techanThemes.view.zipWithIndex){
+            <div class="item @if((i+1)%4==0){last}">
                 <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
                     @for((pic,i)<-pics.view.zipWithIndex){
                     @if(i==0){
@@ -48,7 +120,7 @@ title =  "特色馆_食美特，爱美食爱生活"
                 </h3>
 
                 <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
-                <a rel="followTheme" href="javascript:;"  class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
@@ -56,40 +128,123 @@ title =  "特色馆_食美特，爱美食爱生活"
                     </span>
             </div>
             }
-
-
-        </div>
-        <!--theme main end-->
-
-        <div class="tac mt20">
-            <div class="pagin inlineblock clearfix" id="J_Pagination">
-                @if(page.nums.length>1){
-                @page.prev.map { page =>
-                <a class="prev" href="@controllers.routes.Pages.miss(sortBy,page)">上一页</a>
-                }
-                @for(num <-page.nums){
-                @if(num==page.currentPage){
-                <span class="current">@num</span>
-                }else {
-                <a href="@controllers.routes.Pages.miss(sortBy,num)">@num</a>
-                }
-                }
-                @page.next.map { page =>
-                <a class="next" href="@controllers.routes.Pages.miss(sortBy,page)">下一页</a>
-
-                }
-
-                }
-            </div>
         </div>
     </div>
-</div>
+
+
+    <!-- 滋补主题推荐-->
+    <div class="category clearfix">
+        <div class="hd clearfix">
+            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(2,"new",1)'>滋补</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.gallery(2,"new",1)'>更多&gt;&gt;</a>
+        </div>
+        <div class="group clearfix">
+            @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- zibuThemes.view.zipWithIndex){
+            <div class="item @if((i+1)%4==0){last}">
+                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                    @for((pic,i)<-pics.view.zipWithIndex){
+                    @if(i==0){
+                    <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
+                    }else{
+                    <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
+                    }
+                    }
+
+                </a>
+                <h3 class="ofh">
+                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+                </h3>
+
+                <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+					<span class="mete pl15">
+                    <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
+                        <em class="J_LikeCount">@themeLoveNum</em> 人关注
+                    </a>
+                    </span>
+            </div>
+            }
+        </div>
+    </div>
+
+    <!-- 居家主题推荐-->
+    <div class="category clearfix">
+        <div class="hd clearfix">
+            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(3,"new",1)'>居家</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.gallery(3,"new",1)'>更多&gt;&gt;</a>
+        </div>
+        <div class="group clearfix">
+            @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- jujiaThemes.view.zipWithIndex){
+            <div class="item @if((i+1)%4==0){last}">
+                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                    @for((pic,i)<-pics.view.zipWithIndex){
+                    @if(i==0){
+                    <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
+                    }else{
+                    <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
+                    }
+                    }
+
+                </a>
+                <h3 class="ofh">
+                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+                </h3>
+
+                <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+					<span class="mete pl15">
+                    <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
+                        <em class="J_LikeCount">@themeLoveNum</em> 人关注
+                    </a>
+                    </span>
+            </div>
+            }
+        </div>
+    </div>
+
+<!-- 好玩意主题推荐-->
+<div class="category clearfix">
+    <div class="hd clearfix">
+        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(6,"new",1)'>好玩意</a></h2>
+        <a class="fr" href='@controllers.routes.Pages.gallery(6,"new",1)'>更多&gt;&gt;</a>
+    </div>
+    <div class="group clearfix">
+        @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-haowanyiThemes.view.zipWithIndex){
+        <div class="item @if((i+1)%4==0){last}">
+            <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                @for((pic,i)<-pics.view.zipWithIndex){
+                @if(i==0){
+                <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
+                }else{
+                <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
+                }
+                }
+
+            </a>
+            <h3 class="ofh">
+                <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+            </h3>
+
+            <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+            <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+					<span class="mete pl15">
+                    <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
+                        <em class="J_LikeCount">@themeLoveNum</em> 人关注
+                    </a>
+                    </span>
+        </div>
+        }
+    </div>
 </div>
 
-        }{
+
+</div>
+
+
+}{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
         init.load('app/jie,app/theme/theme.favor');
     });
 </script>
-}
+        }
